# curfil

./: CMakeLists.txt
src/: CMakeLists.txt
src/curfil/: 0_mainpage.h  CMakeLists.txt  hyperopt.cpp  image.cpp  image.h  predict.cpp  predict_main.cpp  random_forest_image.cpp  random_tree.h  random_tree_image.cpp  random_tree_image_gpu.cu  train_main.cpp
src/tests/: random_tree_image_test.cpp
